css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;

}

body {
    font-family: Arial, Helvetica, sans-serif;
    width: 100vw;
    height: 100vh;
    overflow-x: hidden;
}


/* HEADER */

header {
    height: 70px;
    padding: 20px;
}

.flex {
    display: flex;
}

.s-btw {
    justify-content: space-between;
}

.align-center {
    align-items: center;
}

.text-center {
    text-align: center;
}

header a,
footer a {
    text-decoration: none;
}

header a {
    color: black;
}

footer a:visited {
    color: white;
}

ul {
    list-style-type: none;

}

header li {
    display: inline-block;
    margin: 0 15px;
}

.bg-viol {
    background-color: #0061ff;
}

.f-c-white {
    color: white;
}

.p-10-15 {
    padding: 10px 15px;
}

h2 {
    font-size: 36px;
}

button:hover {
    cursor: pointer;
}

/* <!-- 1st SECTION --> */

.container-bg-cel {
    background-color: #b4d0e7;
}

.max-w-900 {
    max-width: 900px;
}

.max-w-400 {
    max-width: 400px;
}

.h-550 {
    height: 550px;
}

.p-40 {
    padding: 40px;
}

.container-1200,
.container-footer {
    max-width: 1200px;
    margin: 0 auto;
}

.m-t-40 {
    margin: 40px 0;
}

h1 {
    font-size: 60px;
    font-weight: 900;
}

.w-700 {
    width: 700px;
}

.img-jumbo {
    max-width: 100%;
}

/* <!-- 2ND SECTION --> */

.container-1000 {
    max-width: 1000px;
    margin: 0 auto;
}

.row {
    display: flex;
    flex-wrap: wrap;
}

.col-33 {
    width: calc(100%/3);
}

.m-t-150 {
    margin-top: 150px;
}

.h-1000 {
    height: 1000px;
}

.border {
    border: 1px solid #d2d2d5;
}

.m-r-30 {
    margin: 0 30px 0 0;
}

.m-t-b-50 {
    margin: 50px 0;
}

.m-l-50 {
    margin-left: 50px;
}

.border-b {
    border-bottom: 1px solid #d2d2d5;
}

.p-25 {
    padding: 25px;
}

.card-33 h3,
h4,
p,
button,
ul {
    margin: 10px 0;
}

.p-10-0 {
    padding: 10px 0;
}

.card-33 li {
    padding: 10px 0
}

.card-33>p:first-of-type {
    color: #d2d2d5;
}

.card-33>button {
    width: 100%;
    margin: 30px 0;
}

hr {
    width: 20%;
}


i {
    margin-right: 10px;
}

/* <!-- 3RD SECTION --> */

.text-right {
    text-align: right;
}

.p-20 {
    padding: 20px
}

.p-10-50 {
    padding: 10px 50px;
}

/* <!-- 4TH SECTION --> */

.m-100-0 {
    margin: 100px 0;
}

.col-60 {
    width: 60%;
}

.col-40 {
    width: 40%;
}

.content-60>img {
    width: 100%;
}

.m-60 {
    margin: 60px;
}

.m-30-0 {
    margin: 30px 0;
}

.p-10-15 {
    padding: 10px 15px;
}

.bg-white {
    background-color: white;
}

.bord {
    border: 1px solid black;
}

.content-gallery img {
    width: 100%;
}

.align-baseline {
    align-items: baseline;
}

.p-30-0 {
    padding: 30px 0;
}

/* <!-- 5TH SECTION --> */


.container-max-500 {
    max-width: 500px;
}

/* <!-- 6TH SECTION --> */

.container-full {
    width: 100vw;
}

.col-square {
    width: calc(100vw/3);
    height: calc(100vw/3);
}

.content-square {
    height: 100%;
    width: 100%;
    overflow-y: auto;
}


.bg-lgray {
    background-color: #f5f5f5;
}

.content-square>img {
    padding: 30px 0;
    width: 40%;
}

.content-square p,
address {
    font-size: 1vw;
}

.col-little-square {
    width: calc(100vw/6);
    height: calc(100vw/6);
}

.content-little-square {
    width: 100%;
    height: 100%;
}

.content-little-square>img {
    width: 50%;
    filter: invert(1);
}

.bg-green {
    background-color: #a2d39b;
}

.bg-bordeaux {
    background-color: #61082b;
}

.bg-blue {
    background-color: #0093ce;
}

.bg-red {
    background-color: red;
}

.border-green {
    border: 15px solid #d1e9cd;
}

.bg-purple {
    background-color: #0d2481;
}

.bg-yellow {
    background-color: #ffd830;
}

.bg-sky {
    background-color: #b4d0e7;
}

.just-center {
    justify-content: center;
}


/* <!-- 7TH SECTION --> */

.max-w-500 {
    max-width: 500px;
}

.f-c-bordeaux {
    color: #61082b;
}

.p-t-b-150 {
    padding: 150px 0;
}

.border-none {
    border: none;
}

.p-10-80 {
    padding: 10px 80px;
}

/* <!-- 8TH SECTION --> */

.p-t-150-b-50 {
    padding: 150px 0 50px 0;
}

.border-t {
    border-top: 1px solid #c2c2c2;

}

.border-b {
    border-bottom: 1px solid #c2c2c2;
}

/* <!-- FOOTER --> */

.p-100-0 {
    padding: 100px 0;
}

footer {
    background: #000;
    color: white;
    margin: 0 auto;
}

.col-footer {
    width: calc(100%/5);
}

footer li {
    margin: 15px 0;
}

footer h3,
.content-40.m-60 h3 {
    padding-bottom: 15px;
    font-size: 24px;
    font-weight: 800;
}

.m-0-10 {
    margin: 0 10px;
}

.m-r-10 {
    margin-right: 10px;
}

footer hr {
    margin: 100px 0;
    width: 10%;
}

